--- a/final/index.html
+++ b/final/index.html
@@ -50,7 +50,7 @@
 
         </div>
 
-        <div class="about-me-image" data-aos="fade-left" data-aos-delay="250">
+        <div class="about-me-image">
           <div class="about-me-image-wrap">
             <img src="images/me.jpg" alt="">
           </div>
@@ -66,7 +66,7 @@
 
         <div class="my-work-list">
 
-          <div class="my-work-list-col" data-aos="fade-up" data-aos-delay="500">
+          <div class="my-work-list-col">
             <article class="work-item">
               <div class="work-item-image">
                 <img src="images/work-01.jpg" alt="">
@@ -82,7 +82,7 @@
             </article>
           </div>
 
-          <div class="my-work-list-col" data-aos="fade-up" data-aos-delay="600">
+          <div class="my-work-list-col">
             <article class="work-item">
               <div class="work-item-image">
                 <img src="images/work-02.jpg" alt="">
@@ -97,7 +97,7 @@
             </article>
           </div>
 
-          <div class="my-work-list-col" data-aos="fade-up" data-aos-delay="700">
+          <div class="my-work-list-col">
             <article class="work-item">
               <div class="work-item-image">
                 <img src="images/work-03.jpg" alt="">
